Completed before work section.

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 			</div>
 			<!--//Slider-->
 			<ul class="top-links">
-				<li><a href="https://facebook.com/manasj04"><i class="fa fa-facebook-official fa-2x"></i></a></li>
-				<li><a href="https://in.linkedin.com/in/manasj04"><i class="fa fa-linkedin fa-2x"></i></a></li>
-				<li><a href="https://github.com/manasj04"><i class="fa fa-github fa-2x"></i></a></li>
-				<li><a href="https://quora.com/Manas-Jain-9"><i class="fa fa-quora fa-2x"></i></a></li>
-				<li><a href="https://instagram.com/manasj04"><i class="fa fa-instagram fa-2x"></i></a></li>
+				<li><a href="https://facebook.com/manasj04" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a></li>
+				<li><a href="https://in.linkedin.com/in/manasj04" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+				<li><a href="https://github.com/manasj04" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+				<li><a href="https://quora.com/Manas-Jain-9" target="_blank"><i class="fa fa-quora fa-2x"></i></a></li>
+				<li><a href="https://instagram.com/manasj04" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
 			</ul>
 		</div>
 		<!-- //banner -->
@@ -145,7 +145,7 @@
 			<div class="col-md-4 list-gds text-center">
 				<i class="fa fa-laptop" aria-hidden="true"></i>
 				<h4>Packages</h4>
-				<p>MATLAB, Diptrace, Proteus, Processing, Android Studio, OpenCV, Anaconda, Atom, Microsoft Office </p>
+				<p>MATLAB, Processing, Android Studio, OpenCV, Diptrace, Proteus, Anaconda, Atom, Microsoft Office </p>
 			</div>
 
 			<div class="col-md-4 list-gds text-center">
@@ -176,7 +176,7 @@
 					<h4>ZINE</h4>
 				</div>
 				<div class="education-agile-w3l-info">
-					<p>Robotics and Research Group of MNIT Jaipur, I did various Projects being part of this group.<br/><a href="http://www.zine.co.in/" target="_blank">Visit Website</a></p>
+					<p>Robotics and Research Group of MNIT Jaipur, I did various Projects being part of this group.<br/><a href="http://www.zine.co.in/" target="_blank">Visit website</a></p>
 
 
 				</div>
@@ -194,7 +194,7 @@
 			</div>
 			<div class="education-agile-w3l one">
 				<div class="education-agile-w3l-year">
-					<h4>My Hobbies</h4>
+					<h4>Hobbies</h4>
 				</div>
 				<div class="education-agile-w3l-info">
 					<p>I like listening to music, watching TV Series and movies, Reading Tech articles, Sketching, playing football and computer games.</p>
@@ -206,7 +206,7 @@
 					<h4>Resume</h4>
 				</div>
 				<div class="education-agile-w3l-info">
-					<p>If you want to have a look at my printable official resume.<a href="https://goo.gl/V3RvSJ" target="_blank"> Click Here</a></p>
+					<p>If you want to have a look at my printable official resume.<a href="https://goo.gl/V3RvSJ" target="_blank"> Click here</a></p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
@@ -215,16 +215,12 @@
 		</div>
 	</div>
 	<div class="col-md-6 skills">
-		<h3 class="w3l_head two">My Skills</h3>
-		<div class="skill-agile">
-			<div class='bar_group'>
-				<div class='bar_group__bar thin elastic' label='HTML' value='230'></div>
-				<div class='bar_group__bar thin elastic' label='Css3' value='130'></div>
-				<div class='bar_group__bar thin elastic' label='Js' value='160'></div>
-				<div class='bar_group__bar thin elastic' label='Php' value='340'></div>
-			</div>
-
-		</div>
+		<h3 class="w3l_head two">You should also know</h3>
+			<p class="list-gds2">My interest includes Computer Programming, Full-Stack Development, Image Processing, Internet of Things, Machine Learning and Robotics.
+				<br/><br/>I have also worked on various fields like Computer Vision, Domotics, Android App, Embedded Systems and Mechatronics.
+				<br/><br/>Good understanding of courses like Data Structure and Algorithms, Object Oriented Programming, Database Management, Computer Networks, Digital Signal Processing, Microprocessors and Control Systems.
+				<br/><br/> Currently, I am working on Blogging website and a research project on Human Gait Analysis. I have also developed an image scanning app, have extensively worked on
+				several robotics projects and projects that can remarkably contribute to world Internet of Things.</p>
 	</div>
 	<div class="clearfix"> </div>
 </div>
