Contact section and footer completed.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<li><a href="#services" class="scroll hvr-bounce-to-bottom">Skills</a></li>
 							<li><a href="#education" class="scroll hvr-bounce-to-bottom">Resume</a></li>
 							<li><a href="#gallery" class="scroll hvr-bounce-to-bottom">Projects</a></li>
-							<li><a href="#mail" class="scroll hvr-bounce-to-bottom">Contact</a></li>
+							<li><a href="#footer" class="scroll hvr-bounce-to-bottom">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -371,46 +371,11 @@
 </div>
 <!--counter-->
 <!-- mail -->
-<div class="mail" id="mail">
-	<div class="container">
-		<h3 class="w3l_head w3l_head1">Contact Me</h3>
-		<p class="w3ls_head_para w3ls_head_para1">send Me a message</p>
-		<div class="w3_mail_grids">
-			<form action="#" method="post">
-				<div class="col-md-6 w3_agile_mail_grid">
-					<span class="input input--ichiro">
-						<input class="input__field input__field--ichiro" type="text" id="input-25" placeholder=" " required="">
-						<label class="input__label input__label--ichiro" for="input-25">
-							<span class="input__label-content input__label-content--ichiro">Your Name</span>
-						</label>
-					</span>
-					<span class="input input--ichiro">
-						<input class="input__field input__field--ichiro" type="email" id="input-26" placeholder=" " required="">
-						<label class="input__label input__label--ichiro" for="input-26">
-							<span class="input__label-content input__label-content--ichiro">Your Email</span>
-						</label>
-					</span>
-					<span class="input input--ichiro">
-						<input class="input__field input__field--ichiro" type="text" id="input-27" placeholder=" " required="">
-						<label class="input__label input__label--ichiro" for="input-27">
-							<span class="input__label-content input__label-content--ichiro">Your Phone Number</span>
-						</label>
-					</span>
 
-				</div>
-				<div class="col-md-6 w3_agile_mail_grid">
-					<textarea name="Message" placeholder="Your Message" required=""></textarea>
-					<input type="submit" value="Submit">
-				</div>
-				<div class="clearfix"> </div>
-			</form>
-		</div>
-	</div>
-</div>
 
 <!-- //mail -->
 <!-- footer -->
-<div class="w3l_footer">
+<div class="w3l_footer" id="footer">
 	<div class="container">
 
 		<div class="w3ls_footer_grids">
@@ -418,31 +383,32 @@
 			<div class="w3ls_footer_grid">
 				<div class="col-md-4 w3ls_footer_grid_left">
 					<div class="w3ls_footer_grid_leftl">
-						<i class="fa fa-map-marker" aria-hidden="true"></i>
+						<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
 					</div>
 					<div class="w3ls_footer_grid_leftr">
-						<h4>Location</h4>
-						<p>3030 New York, NY, USA</p>
+						<h4>Where to find me</h4>
+						<p>MNIT, JLN Marg, Malviya Nagar, Jaipur, Rajasthan 302017</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="col-md-4 w3ls_footer_grid_left">
 					<div class="w3ls_footer_grid_leftl">
-						<i class="fa fa-envelope" aria-hidden="true"></i>
+						<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
 					</div>
 					<div class="w3ls_footer_grid_leftr">
-						<h4>Email</h4>
-						<a href="mailto:info@example.com">info@example.com</a>
+						<h4>Email Me At</h4>
+						<a href="mailto:manasj04@gmail.com">manasj04@gmail.com</a>
+						<a href="mailto:2014UEE1106@mnit.ac.in">2014UEE1106@mnit.ac.in</a>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
 				<div class="col-md-4 w3ls_footer_grid_left">
 					<div class="w3ls_footer_grid_leftl">
-						<i class="fa fa-phone" aria-hidden="true"></i>
+						<i class="fa fa-phone fa-2x" aria-hidden="true"></i>
 					</div>
 					<div class="w3ls_footer_grid_leftr">
-						<h4>Call Me</h4>
-						<p>(+000) 003 003 0052</p>
+						<h4>Call Me at</h4>
+						<p>+91-8376845377</p>
 					</div>
 					<div class="clearfix"> </div>
 				</div>
@@ -451,7 +417,16 @@
 		</div>
 	</div>
 	<div class="w3l_footer_pos">
-		<p>© 2016 Classy Resume. All Rights Reserved | Design by <a href="https://w3layouts.com/">W3layouts</a></p>
+		<ul class="top-links" align="center">
+			<li><a href="https://facebook.com/manasj04" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a></li>
+			<li><a href="https://in.linkedin.com/in/manasj04" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
+			<li><a href="https://github.com/manasj04" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+			<li><a href="https://quora.com/Manas-Jain-9" target="_blank"><i class="fa fa-quora fa-2x"></i></a></li>
+			<li><a href="https://instagram.com/manasj04" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li>
+		</ul>
+	</div>
+	<div class="w3l_footer_pos">
+		<p><a href="https://w3layouts.com/" style="text-decoration: none;" target="_blank">©</a> 2017 All Rights Reserved |Manas Jain</p>
 	</div>
 </div>
 <!-- //footer -->
