Some minor changes
Heading "Areas of experstis", Projeects and other small changes.

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 		</div>
 	</div>
 	<div class="col-md-6 skills">
-		<h3 class="w3l_head two">You should also know</h3>
+		<h3 class="w3l_head two">Areas of Expertise</h3>
 			<p class="list-gds2">My interest includes Computer Programming, Full-Stack Development, Image Processing, Internet of Things, Machine Learning and Robotics.
 				<br/><br/>I have also worked on various fields like Computer Vision, Domotics, Android App, Embedded Systems and Mechatronics.
 				<br/><br/>Good understanding of courses like Data Structure and Algorithms, Object Oriented Programming, Database Management, Computer Networks, Digital Signal Processing, Microprocessors and Control Systems.
@@ -227,8 +227,8 @@
 <!-- /gallery-->
 <div class="portfolio" id="gallery">
 	<div class="container">
-		<h3 class="w3l_head">My Gallery</h3>
-		<p class="w3ls_head_para">See My Works</p>
+		<h3 class="w3l_head">My Projects</h3>
+		<p class="w3ls_head_para">Check Out Some of My Works</p>
 		<div class="agileits_portfolio_grids">
 			<div class="col-md-4 agileits_portfolio_grid">
 				<div class="agileinfo_portfolio_grid hovereffect">
