Icon in title added.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/portfolio_new.css" rel="stylesheet" type="text/css" media="all" />
 	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
+	<link rel="shortcut icon" href="images/icon.png" type="image/png">
 	<!-- gallery -->
 	<link type="text/css" rel="stylesheet" href="css/cm-overlay.css" />
 	<!-- //gallery -->
