Small changes in footer.

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ the system can traverse on any terrain and has camera feed and wireless controll
 							<i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
 						</div>
 						<div class="w3ls_footer_grid_leftr">
-							<h4>Email Me At</h4>
+							<h4>Email Me</h4>
 							<a href="mailto:manasj04@gmail.com">manasj04@gmail.com</a>
 							<a href="mailto:2014UEE1106@mnit.ac.in">2014UEE1106@mnit.ac.in</a>
 						</div>
@@ -585,7 +585,7 @@ the system can traverse on any terrain and has camera feed and wireless controll
 							<i class="fa fa-phone fa-2x" aria-hidden="true"></i>
 						</div>
 						<div class="w3ls_footer_grid_leftr">
-							<h4>Call Me at</h4>
+							<h4>Call Me</h4>
 							<p>+91-8376845377</p>
 						</div>
 						<div class="clearfix"> </div>
