--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 	<link href="https://fonts.googleapis.com/css?family=Gidugu|Open+Sans" rel="stylesheet">
 </head>
 <body>
+
+	<div id="loader-wrapper">
+    <div id="loader"></div>
+    <div class="loader-section section-left"></div>
+    <div class="loader-section section-right"></div>
+	</div>
 	<div class="main" id="home">
 		<!-- banner -->
 		<div class="banner">
@@ -704,7 +710,15 @@ the system can traverse on any terrain and has camera feed and wireless controll
 	});
 	</script>
 	<!-- start-smoth-scrolling -->
+		<script type="text/javascript">
+	$(document).ready(function() {
 
+		setTimeout(function(){
+			$('body').addClass('loaded');
+		},3000);
+
+	});
+	</script>
 	<!-- //js -->
 	<script src="js/bootstrap.js"></script>
 	<!-- //for bootstrap working -->
