--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@ the system can traverse on any terrain and has camera feed and wireless controll
 							<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
 						</div>
 						<div class="w3ls_footer_grid_leftr">
-							<h4>Where to find me</h4>
+							<h4>Locate me</h4>
 							<p>MNIT, JLN Marg, Malviya Nagar, Jaipur, Rajasthan 302017</p>
 						</div>
 						<div class="clearfix"> </div>
