Minor Errors fixed

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@ the system can traverse on any terrain and has camera feed and wireless controll
 			</ul>
 		</div>
 		<div class="w3l_footer_pos">
-			<p><a href="https://w3layouts.com/" style="text-decoration:none;" target="_blank">©</a> 2017 All Rights Reserved |Manas Jain</p>
+			<p>© 2017 All Rights Reserved |Manas Jain</p>
 		</div>
 	</div>
 	<!-- //footer -->
