What I do section updated

--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
 	</div>
 	<div class="col-md-6 skills">
 		<h3 class="w3l_head two">what i do</h3>
-		<p class="list-gds2">My interest includes Computer Programming, Full-Stack Development, Image Processing, Internet of Things, Machine Learning and Robotics.
-			<br/><br/>I have also worked in various fields like Computer Vision, Domotics, Android App, Embedded Systems and Mechatronics.
+		<p class="list-gds2">My interest includes Computer Programming, Image Processing, Artificial Intelligence, Machine Learning, Full-Stack Development and Robotics.
+			<br/><br/>I have also worked in various fields like Android App Development, Internet of Things, Domotics, Embedded Systems and Mechatronics.
 			<br/><br/>Good understanding of courses like Data Structure and Algorithms, Object Oriented Programming, Database Management, Computer Networks, Digital Signal Processing, Microprocessors and Control Systems.
 			<br/><br/> Currently, I am working on HCI based Blogging website and a research project on Human Gait Analysis. I have also developed an image scanning app, have extensively worked on
 			several robotics projects and projects that can remarkably contribute to world Internet of Things.</p>
