Resume link removed.

--- a/index.html
+++ b/index.html
@@ -213,10 +213,10 @@
 			</div>
 			<div class="education-agile-w3l">
 				<div class="education-agile-w3l-year">
-					<h4>Resume</h4>
+					<h4>Social Links</h4>
 				</div>
 				<div class="education-agile-w3l-info">
-					<p>If you want to have a look at my printable official resume.<a href="https://goo.gl/V3RvSJ" target="_blank"> Click here</a></p>
+					<p>You can contact me anywhere on these social platforms.<a href="#footer"> Contact Me</a></p>
 				</div>
 				<div class="clearfix"></div>
 			</div>
