--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<div class="col-md-7 w3ls-agile-left">
 				<div class="w3ls-agile-left-info">
 					<h4>Currrent Position</h4>
-					<p>Electrical Engineering, VI Semester</p>
+					<p>Electrical Engineering, VIII Semester</p>
 				</div>
 				<div class="w3ls-agile-left-info">
 					<h4>Date of Birth</h4>
